@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class addEntryTodoListUI {
}



class Repositories {
    + getInstance()
    + getAgenda()
    + getToDoList()
}

class ToDoController{
    + getToDoListRepository()
    + AddEntry(entry)
}

class AgendaController{
    + getAgenda()
    + getEntries()
}

class Agenda{
    getEntries()
}

class ToDoList{
    + getToDoList()
    + AddEntry(entry)
}

class Entry{
    Title
    Description
    Urgency
    Status
}

class AgendaEntry{
    Entry
    Team
    Vehicle
    startDate
    endDate
    duration
}

addEntryTodoListUI --> ToDoController
ToDoController --> Repositories
addEntryTodoListUI --> AgendaController
Repositories --> ToDoList
AgendaController --> Repositories
Repositories --> Agenda
AgendaEntry --> Entry: contains
ToDoList --> Entry: contains
Agenda -> AgendaEntry: contains
@enduml